--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,8 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	include modApi("teamreborn:energy:${project.energy_version}")
 }
 
 processResources {
